      as expired
    - All Tesla API calls are now routed through a new _tesla_api_call() method;
      accepts a $request, returns a $response. This allows all calls to route
      through the API retry functionality
    - Added _api_attempts(); returns the number of attempts we've made for each
      individual call to Tesla's API
    - Renamed _cache() to _api_cache()

0.10    2022-04-11
    - Remove erroneous call example from Tesla::Vehicle from the SYNOPSIS
    - Added prereq of LWP::Protocol::https
    - Remove WWW::Mechanize timeout (it defaults to 180 secs in LWP::UserAgent)
    - Add API_TIMEOUT_RETRIES; If a Tesla API call times out, try it again this
      many times
    - Accept PR #9 (fix compatibility with JSON < 4) and apply that change to
      all instances of encode_json()

0.09    2022-03-22
    - In CI script, manually install File::ShareDir::Install, as it doesn't get
      installed by default the way we configure the test run (was throwing "! No
      MYMETA file is found after configure. Your toolchain is too old?" error on
      the 'cpanm --installdeps .' command).
    - api() now requires all parameters sent in as a hash

0.08    2022-03-22
    - We now store endpoints.json and option_codes.json in a share directory
      with the library (closes #4)
    - Added update_data_files(), updates the endpoints.json and
      option_codes.json files this library uses if they have in fact been
      changed
    - Added option_codes

0.07    2022-03-21
    - POD corrections

0.06    2022-03-20
    - Made "API CACHE METHODS" section a head1 in POD

0.05    2022-03-20
    - DEBUG_API_CACHE now retrieved from $ENV{DEBUG_TESLA_API_CACHE} instead of
      having it as a magic number (so we don't accidentally publish the code
      with it set ;)
    - Make EXAMPLE POD section a head1; accidentally had it as a head2
    - Moved all cache methods in POD to their own METHOD section

0.04    2022-03-20